# fake_obtlib

./: tags
src/: CMakeLists.txt  a.out  main.cpp  obt_test
src/client/: CMakeLists.txt  main.cpp
src/client/obtlib/: RREService_api.cpp  RREService_api.h  common_type.h
src/gtest/: CMakeLists.txt  test.cpp
src/obtlib/: CMakeLists.txt  RREService_api.cpp  RREService_api.h
src/server/: CMakeLists.txt  common_type.h  handler.cpp  handler.h  main.cpp  r.h  udpserver.cpp  udpserver.h
